# ontological-graph-funding

./: .gitignore  README.md  main.py  ontological-graph-funding.bundle  push-to-github.sh  pyproject.toml
app/: index.html  package-lock.json  package.json
app/public/: test.html
app/src/: App.tsx  index.css
app/src/api/: fundingApi.ts
app/src/components/: FundingGraph.tsx  Legend.tsx  NodeDetailsPanel.tsx  StatsPanel.tsx
app/src/data/: dynamicFundingData.ts  fundingData.ts
app/src/hooks/: useNodeNarration.ts
backend/: .env.example  aiScriptWriter.js  app.js  app.test.js  data.js  errors.js  graphStore.js  narrator.js  package-lock.json  package.json  seed.js  server.js  validation.js
scraper/: README.md  __init__.py  api_client.py  cli.py  llm_parser.py  models.py  requirements.txt  run.py  scraper.py
scraper/sources/: __init__.py  base.py  mock_source.py  rss_source.py
