[project]
name = "ontological-graph-funding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "click>=8.1.0",
]

[project.scripts]
funding-scraper = "scraper.cli:cli"
