[project]
name = "ontological-graph-funding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "firecrawl-py>=1.0.0",
    "elevenlabs>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
funding-scraper = "scraper.cli:cli"

[tool.setuptools.packages.find]
include = ["scraper*"]
